feat(1345): fix test cases